# faustlive

./: .gitignore  .gitmodules  .travis.yml  AL_audioFactory.cpp  AL_audioFader.h  AL_audioManager.cpp  AL_audioManager.h  AL_audioSettings.h  AudioCreator.cpp  AudioCreator.h  AudioFactory.h  AudioManager.h  AudioSettings.h  CA_audioFactory.cpp  CA_audioFactory.h  CA_audioFader.h  CA_audioManager.cpp  CA_audioManager.h  CA_audioSettings.cpp  CA_audioSettings.h  COPYING.txt  Effect.cpp  Effect.h  FJUI.h  FLApp.cpp  FLApp.h  FLEffect.cpp  FLEffect.h  FLErrorWindow.cpp  FLErrorWindow.h  FLExportManager.cpp  FLExportManager.h  FLServerHttp.cpp  FLServerHttp.h  FLToolBar.cpp  FLToolBar.h  FLWindow.cpp  FLWindow.h  FLrenameDialog.cpp  FLrenameDialog.h  (+49 more)
.github/workflows/: all.yml
API_FAUSTWEB/: Faust_Exporter.cpp  Faust_Exporter.h  SimpleParser.cpp
Distribution_Linux/FaustLive/: sound2faust
Distribution_OSX/: README_BEFORE_YOU_START.txt
Documentation/: Implementation.tex  RemoteFeatures.bib  RemoteFeatures.tex  Specification.tex  TestingFaustLive.tex  ToDoList.tex  UserManual.tex
Documentation/SarahNoteBook/: SpecificationsRemoteProcessing.txt  TestFL.xlsx
Documentation/images/: FLAppUML.docx  FLComponentWindowUML.docx  FLSettings.docx  FLWinSettings.docx  FLWindowUML.docx  FactoryCreation.docx  GeneralUML.docx  RemoteControl.docx  newAudioStructure.docx
Examples/: osc.dsp
Libs/: scheduler.ll
Resources/: FaustLiveIcon.icns  Makefile  application.qrc  application.qrc.base  buildVersion.txt  readme.md  scheduler.qrc  styles.qrc  styles.qrc.in  unix.qrc  windows.qrc
Resources/Examples/: TestLibs.dsp  blowBottle.dsp  clarinet.dsp  cubic_distortion.dsp  flute.dsp  fluteStk.dsp  harpeAutomation.dsp  harpeautomation.dsp  organ.dsp  saxophony.dsp  sitar.dsp  smoothdelay.dsp
Resources/Examples_bckp/: flute.dsp  glassHarmonica.dsp  phaser_flanger.dsp  tibetanBowl.dsp  wahwah.dsp  zita_rev1.dsp
Resources/Html/: ExportInterface.html  ServerAvailableInterfacesHead.html  ServerHead.html  ServerTail.html  WantedPageForAvailableInterfaces.html
Resources/Images/: faustlive.xpm
Resources/Libs/: TestLibs.dsp  llvm_math.ll  music.lib  scheduler.ll
docker/: Dockerbase  Dockerfile  Makefile  fl-backends.cmake  fl-targets.cmake
package/: CMakeLists.txt  Makefile  README.html  README.md  makepkg.bat
src/: AL_audioFactory.h  AL_audioFader.h  AL_audioSettings.cpp  AudioCreator.cpp  AudioCreator.h  AudioFactory.h  AudioFader_Implementation.cpp  AudioFader_Implementation.h  AudioManager.h  AudioSettings.h  CA_audioFactory.cpp  CA_audioFactory.h  CA_audioFader.h  CA_audioManager.cpp  CA_audioManager.h  CA_audioSettings.cpp  CA_audioSettings.h  FLApp.cpp  FLApp.h  FLEffect.cpp  FLEffect.h  FLErrorWindow.cpp  FLErrorWindow.h  FLExportManager.cpp  FLExportManager.h  FLRemoteManager.cpp  FLRemoteManager.h  FLServerHttp.cpp  FLServerHttp.h  FLSettings.cpp  FLSettings.h  FLToolBar.cpp  FLToolBar.h  FLWindow.cpp  FLWindow.h  FLrenameDialog.h  HTTPWindow.cpp  HTTPWindow.h  JA_audioFactory.cpp  JA_audioFactory.h  (+34 more)
src/Audio/: AudioCreator.cpp  AudioCreator.h  AudioFactory.h  AudioFader_Implementation.cpp  AudioFader_Implementation.h  AudioFader_Interface.h  AudioManager.h  AudioSettings.h  FJUI.h
(+106 files in other folders)
